# Proof_Trade

./: .env.example  .gitignore  CLAUDE.md  README.md  input.md  pyproject.toml  twakdocs.md
docs/superpowers/plans/: 2026-06-12-prooftrade-agent.md
src/: agent_identity.py  config.py  decision_engine.py  executor.py  main.py  market_data.py  models.py  portfolio.py  risk_manager.py
tests/: test_agent_identity.py  test_config.py  test_decision_engine.py  test_executor.py  test_market_data.py  test_models.py  test_portfolio.py  test_risk_manager.py
